--- a/css/site.css
+++ b/css/site.css
@@ -1,17 +1,20 @@
 body {
-	background-color: #a5a58d;
+	background-color: #c89f9c;
 }
 img {
 	width: 160px;
 }
 
+h1, h2, h3 {
+  color: #b36a5e;
+}
 
 #content {
 	min-height: 200px;
 	padding: 25px;
 	margin: 10px;
 	border: solid 1px black;
-	background-color: #ffe8d6;
+	background-color: #eee2df;
 }
 
 #labs {
@@ -19,5 +22,5 @@ img {
 	padding: 25px;
 	margin: 10px;
 	border: solid 1px black;
-	background-color: #ffe8d6;
+	background-color: #eee2df;
 }
