--- a/lab4/css/lab4.css
+++ b/lab4/css/lab4.css
@@ -1,11 +1,11 @@
 body {
-	background-color: #a5a58d;
+	background-color: #c89f9c;
 }
 #content {
-	
+
 	min-height: 50px;
 	padding: 25px;
 	margin: 10px;
 	border: solid 1px black;
-	background-color: #ffe8d6;
+	background-color: #eee2df;
 }
