--- a/css/site.css
+++ b/css/site.css
@@ -23,3 +23,18 @@ h1, h2, h3 {
 	margin: 10px;
 	background-color: #eee2df;
 }
+
+a:link {
+color: #b36a5e;
+text-decoration: none;
+}
+
+a:visited {
+color: black;
+text-decoration: none;
+}
+
+a:hover {
+color: white;
+text-decoration: none;
+}
