--- a/css/site.css
+++ b/css/site.css
@@ -1,17 +1,35 @@
 body {
 	background-color: #c89f9c;
 }
-
+p {
+	font-size: 18px;
+}
 #myself {
-	width: 160px;
+	width: 170px;
+	float: left;
+	margin-left: 200px;
+	padding-right: 15px;
 }
 
-h1, h2, h3 {
+#aboutMe {
+	margin-left: 200px;
+	margin-right: 200px;
+}
+
+h1 {
+	color: #b36a5e;
+	font-family: 'Brush Script MT', cursive;
+	font-size: 50px;
+	text-align: center;
+}
+
+h2, h3 {
+	font-size: 25px;
   color: #b36a5e;
 }
 
 #content {
-	min-height: 200px;
+	min-height: 370px;
 	padding: 25px;
 	margin: 10px;
 	background-color: #eee2df;
@@ -37,4 +55,27 @@ text-decoration: none;
 a:hover {
 color: white;
 text-decoration: none;
+}
+
+
+#navcontainer ul {
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: right;
+}
+
+#navcontainer ul li {
+display: inline;
+}
+
+#navcontainer ul li a {
+text-decoration: none;
+padding: .2em 1em;
+color: #fff;
+}
+
+#navcontainer ul li a:hover {
+color: #fff;
+background-color: #b36a5e;
 }
