--- a/css/site.css
+++ b/css/site.css
@@ -62,7 +62,7 @@ text-decoration: none;
 margin: 0;
 padding: 0;
 list-style-type: none;
-text-align: right;
+text-align: left;
 }
 
 #navcontainer ul li {
