--- a/lab7/css/lab7.css
+++ b/lab7/css/lab7.css
@@ -3,5 +3,9 @@
 	min-height: 100px;
 	padding: 5px 15px 15px 15px;
 	margin: 10px;
-	border: solid 1px black;
+	border: solid 1px #b36a5e;
+}
+
+.links {
+  text-align: right;
 }
