--- a/lab5/css/lab5.css
+++ b/lab5/css/lab5.css
@@ -1,10 +1,12 @@
-
-
 #output {
 	min-height: 100px;
 	padding: 5px 15px 15px 15px;
 	margin: 10px;
-	border: solid 1px black;
+	border: solid 1px #b36a5e;
+}
+
+.links {
+  text-align: right;
 }
 
 #carpic {
